--- a/src/design/organisms/quote/quote.component.html
+++ b/src/design/organisms/quote/quote.component.html
@@ -25,9 +25,12 @@
             [entries]="badgeEntries()"
             [label]="'Characters'"
             [createOptions]="{
-              options: campaignCharacters(),
-              labelProp: 'name',
-              valueProp: 'pk',
+              kind: 'SELECT',
+              config: {
+                options: campaignCharacters(),
+                labelProp: 'name',
+                valueProp: 'pk',
+              },
             }"
             [canCreate]="canCreate()"
             [canDelete]="canDelete()"
