--- a/src/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/design/molecules/small-create-form/small-create-form.component.html
@@ -1,15 +1,13 @@
-<ng-container *ngIf="options && options.length > 0">
-  <ng-container [ngSwitch]="state">
-    <ng-container
-      *ngSwitchCase="'DISPLAY'"
-      [ngTemplateOutlet]="displayState"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'CREATE'"
-      [ngTemplateOutlet]="createState"
-    ></ng-container>
-  </ng-container>
-</ng-container>
+@if (options && options.length > 0) {
+  @switch (state) {
+    @case ("DISPLAY") {
+      <ng-container [ngTemplateOutlet]="displayState" />
+    }
+    @case ("CREATE") {
+      <ng-container [ngTemplateOutlet]="createState" />
+    }
+  }
+}
 
 <ng-template #displayState>
   <app-badge
@@ -17,7 +15,8 @@
     [type]="'PRIMARY'"
     [icon]="'plus'"
     [text]="badgeText"
-    (click)="changeState('CREATE')"
+    [clickable]="true"
+    (badgeClick)="changeState('CREATE')"
   ></app-badge>
 </ng-template>
 
@@ -31,9 +30,9 @@
       (change)="onChange($event)"
     >
       <option [value]="undefined">-----</option>
-      <ng-container *ngFor="let option of options; let i = index">
+      @for (option of options; track option) {
         <option
-          [value]="i"
+          [value]="$index"
           [attr.selected]="
             option[valueProp] === userModel[valueProp] ? true : null
           "
@@ -41,7 +40,7 @@
         >
           {{ option[labelProp()] }}
         </option>
-      </ng-container>
+      }
     </select>
 
     <!-- Cancel Button -->
