--- a/src/design/molecules/small-create-form/small-create-form.component.scss
+++ b/src/design/molecules/small-create-form/small-create-form.component.scss
@@ -1,15 +1,19 @@
-.display-form{
+.display-form {
   cursor: pointer;
   display: flex;
+
+  &:focus {
+    outline: solid 3px var(--bs-link-hover-color);
+  }
 }
 
-.form{
+.form {
   display: flex;
   align-items: center;
   flex-direction: row;
 }
 
-.form-select{
+.form-select {
   width: unset !important;
-  padding: var(--spacer-1) var(--spacer-2) var(--spacer-1) var(--spacer-2)
+  padding: var(--spacer-1) var(--spacer-2) var(--spacer-1) var(--spacer-2);
 }
