--- a/src/design/templates/character-create-update/character-create-update.component.scss
+++ b/src/design/templates/character-create-update/character-create-update.component.scss
@@ -1,41 +1,47 @@
-.heading{
+.heading {
   display: flex;
   justify-content: space-between;
   text-align: center;
-  
-  &__text{
-    flex: 1
+
+  &__text {
+    flex: 1;
   }
 }
 
-.create-update{
-  &__heading{
-    
+.create-update {
+  &__heading {
   }
-  
-  &__form{
-    
+
+  &__form {
   }
 }
 
-.form{
-  &__character-data{
+.form {
+  &__character-data {
     margin-bottom: var(--spacer-4);
   }
-  
-  &__player-classes{
+
+  &__player-classes {
     margin-bottom: var(--spacer-5);
   }
-  
-  &__memberships{
+
+  &__memberships {
     margin-bottom: var(--spacer-5);
   }
-  
-  &__heading-separator{
+
+  &__heading-separator {
     --separator-margin-top: var(--spacer-0);
   }
-  
-  &__heading{
+
+  &__heading {
     margin-bottom: var(--spacer-0);
+  }
+
+  &__add-membership-badge {
+    border-radius: var(--bs-border-radius);
+    &:focus,
+    &:hover {
+      outline: solid 3px var(--bs-link-hover-color);
+    }
   }
 }
