--- a/src/design/templates/location-template/location-template.component.html
+++ b/src/design/templates/location-template/location-template.component.html
@@ -3,24 +3,23 @@
     <ng-container *ngIf="canUpdate">
       <div class="location__edit-container">
         <a [routerLink]="updateUrl">
-          <app-button
-            [icon]="'pencil'"
-            [type]="'SECONDARY'"
-          ></app-button>
+          <app-button [icon]="'pencil'" [type]="'SECONDARY'"></app-button>
         </a>
       </div>
     </ng-container>
-  
+
     <!-- Heading -->
     <div class="row">
-      <h1 class="col-12 location__heading"> 
-        {{ location.name }} 
+      <h1 class="col-12 location__heading">
+        {{ location.name }}
       </h1>
-  
+
       <!-- String indicating all parent_locations -->
       <ng-container *ngIf="location.parent_location_list?.length ?? 0 > 0">
         <h5 class="col-12 location__subheading subheading">
-          <ng-container *ngFor="let parentLocation of parentLocations; let i = index">
+          <ng-container
+            *ngFor="let parentLocation of parentLocations; let i = index"
+          >
             <a [routerLink]="parentLocation.link">
               {{ parentLocation.label }}
             </a>
@@ -32,43 +31,43 @@
           {{ location.name }}
         </h5>
       </ng-container>
-  
     </div>
-  
-  <!-- Image Gallery -->
-  <div class="location__images">
+
     <!-- Image Gallery -->
-    <app-image-carousel-card
-      [images]="location.images ?? []"
-      [serverUrl]="serverUrl"
-      [serverModel]="imageServerModel"
-      [canUpdate]="canUpdate"
-      [canCreate]="canCreate"
-      [canDelete]="canDelete"
-      (createImage)="createImage.emit($event)"
-      (deleteImage)="deleteImage.emit($event)"
-      (updateImage)="updateImage.emit($event)"
-    ></app-image-carousel-card>
-  </div>
-  
+    <div class="location__images">
+      <!-- Image Gallery -->
+      <app-image-carousel-card
+        [images]="location.images ?? []"
+        [serverUrl]="serverUrl"
+        [serverModel]="imageServerModel"
+        [canUpdate]="canUpdate"
+        [canCreate]="canCreate"
+        [canDelete]="canDelete"
+        (createImage)="createImage.emit($event)"
+        (deleteImage)="deleteImage.emit($event)"
+        (updateImage)="updateImage.emit($event)"
+      ></app-image-carousel-card>
+    </div>
+
     <div class="mb-3">
       <app-badge-list
         [entries]="markerEntries"
         [canCreate]="canCreate"
         [canDelete]="false"
         [label]="'Mapmarker'"
-        [createOptions]="markerCreateUrl"
+        [createOptions]="{
+          kind: 'LINK',
+          link: markerCreateUrl,
+        }"
       ></app-badge-list>
     </div>
-  
+
     <!-- Description -->
     <div class="location__description">
-      <h4> Description </h4>
-      <app-html-text
-        [text]="location.description"
-      ></app-html-text>
+      <h4>Description</h4>
+      <app-html-text [text]="location.description"></app-html-text>
     </div>
-  
+
     <!-- Characters of Interest -->
     <div class="location__characters">
       <app-list
@@ -79,16 +78,15 @@
         (create)="routeToCharacterCreation()"
       ></app-list>
     </div>
-  
-  
+
     <!-- Locations of Interest -->
     <div class="encounter-list mb-5 mt-3">
-      <app-location-accordion 
+      <app-location-accordion
         [locations]="location.sublocations ?? []"
         [canCreate]="canCreate"
       ></app-location-accordion>
     </div>
-  
+
     <!-- Footer (Move to other Article + Delete Article) -->
     <app-article-footer
       [buttonLink]="overviewUrl"
@@ -97,6 +95,5 @@
       [deleteMessage]="'Delete ' + location.name + '?'"
       (delete)="locationDelete.emit(location)"
     ></app-article-footer>
-    
   </article>
 </app-page-container>
