Add character creation

--- a/src/app/campaign/pages/character-create-update-page/character-create-update-page.component.html
+++ b/src/app/campaign/pages/character-create-update-page/character-create-update-page.component.html
@@ -1,4 +1,4 @@
-@let character = store.character();
+@let character = userModel();
 @let campaignName = globalStore.campaignName();
 
 @if (character && campaignName) {
