Creature create update

--- a/src/design/templates/creature/creature.component.html
+++ b/src/design/templates/creature/creature.component.html
@@ -41,7 +41,7 @@
       [buttonLink]="overviewUrl()"
       [buttonLabel]="'Back to Creatures'"
       [showDelete]="canDelete()"
-      [deleteMessage]="'Delete ' + creature.name + '?'"
+      [deleteMessage]="'Delete ' + creature().name + '?'"
       (delete)="creatureDelete.emit(creature())"
     ></app-article-footer>
   </article>
