Add editable text field

--- a/src/app/campaign/pages/creature-page/creature-page.component.html
+++ b/src/app/campaign/pages/creature-page/creature-page.component.html
@@ -12,5 +12,6 @@
     (updateImage)="store.updateImage($event)"
     (deleteImage)="store.deleteImage($event.pk!)"
     (creatureDelete)="deleteCreature($event)"
+    (creatureUpdate)="store.updateCreature($event)"
   ></app-creature>
 }
