--- a/src/design/templates/general-overview/general-overview.component.scss
+++ b/src/design/templates/general-overview/general-overview.component.scss
@@ -1,19 +1,24 @@
-.overview{
-  &__page-heading{
-    margin-bottom: var(--spacer-4);
-    padding-bottom: var(--spacer-1);
-    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+.overview {
+  &__subheading {
   }
 
-  &__create{
+  &__page-heading {
+    margin-bottom: var(--spacer-4);
+    padding-bottom: var(--spacer-1);
+    border-bottom: var(--bs-border-width) var(--bs-border-style)
+      var(--bs-border-color);
+  }
+
+  &__create {
     margin-bottom: var(--spacer-3);
   }
-  
-  &__home{
+
+  &__home {
     margin-top: var(--spacer-4);
   }
-  
-  &__image{
+
+  &__image {
+    width: 100%;
     max-height: 23rem;
     max-width: 100%;
     object-fit: cover;
@@ -22,15 +27,14 @@
     padding-right: var(--spacer-0);
     margin-bottom: var(--spacer-4);
   }
-  
-  &__player-card{
+
+  &__player-card {
     margin-bottom: var(--spacer-4);
   }
 }
 
-.player-card{
-  &__link{
+.player-card {
+  &__link {
     text-decoration: none;
-    
   }
 }
