--- a/src/design/organisms/editable-text/editable-text.component.html
+++ b/src/design/organisms/editable-text/editable-text.component.html
@@ -20,6 +20,8 @@
   (submit)="finishEdit()"
 >
   <editor
+    #editor
+    id="editor"
     [init]="settings"
     name="textEditField"
     [(ngModel)]="textModel"
