--- a/src/design/templates/item/item.component.scss
+++ b/src/design/templates/item/item.component.scss
@@ -1,24 +1,25 @@
-.item{
-  &__edit-container{
+.item {
+  &__edit-container {
     width: 100%;
     display: flex;
     justify-content: flex-end;
   }
-  
-  &__heading{
+
+  &__heading {
     text-align: center;
   }
-  
-  &__subheading{
+
+  &__subheading {
     margin-bottom: var(--spacer-3);
     text-align: center;
   }
-  
-  &__images{
+
+  &__images {
     margin-bottom: var(--spacer-3);
   }
-  
-  &__description{
+
+  &__description {
+    width: 100%;
     margin-bottom: var(--spacer-5);
   }
 }
