--- a/src/app/campaign/pages/item-page/item-page.component.html
+++ b/src/app/campaign/pages/item-page/item-page.component.html
@@ -4,6 +4,7 @@
   <app-item
     [serverUrl]="serverUrl"
     [item]="item"
+    [itemServerModel]="store.itemServerModel()"
     [imageServerModel]="store.imageServerModel()"
     [canCreate]="store.hasWritePermission()"
     [canDelete]="store.hasWritePermission()"
