--- a/src/design/organisms/editable-text/editable-text.component.html
+++ b/src/design/organisms/editable-text/editable-text.component.html
@@ -47,7 +47,7 @@
     <!-- Comparison text -->
     <div>
       <h3>Server Version</h3>
-      <app-html-text [text]="text()" />
+      <app-html-text [text]="serverModel()!" />
     </div>
 
     <app-separator />
