--- a/src/design/templates/character/character.component.html
+++ b/src/design/templates/character/character.component.html
@@ -104,6 +104,7 @@
       [heading]="'Description'"
       [placeholder]="'Add a description for ' + character().name"
       [text]="character().description"
+      [serverModel]="characterServerModel()?.description"
       (update)="onDescriptionUpdate($event)"
     ></app-editable-text>
 
