--- a/src/design/templates/creature/creature.component.html
+++ b/src/design/templates/creature/creature.component.html
@@ -36,6 +36,7 @@
       [heading]="'Description'"
       [placeholder]="'Add a description for ' + creature().name"
       [text]="creature().description"
+      [serverModel]="creatureServerModel()?.description"
       (update)="onDescriptionUpdate($event)"
     ></app-editable-text>
 
