--- a/src/design/templates/item/item.component.html
+++ b/src/design/templates/item/item.component.html
@@ -55,7 +55,7 @@
       [buttonLink]="overviewUrl()"
       [buttonLabel]="'Back to Items'"
       [showDelete]="canDelete()"
-      [deleteMessage]="'Delete ' + item.name + '?'"
+      [deleteMessage]="'Delete ' + item().name + '?'"
       (delete)="itemDelete.emit(item())"
     ></app-article-footer>
   </article>
