--- a/src/design/molecules/badge-list/badge-list.component.scss
+++ b/src/design/molecules/badge-list/badge-list.component.scss
@@ -1,26 +1,17 @@
-@import '/src/screens.scss';
+@import "/src/screens.scss";
 
-.badge-list{
+.badge-list {
   display: inline-flex;
-  flex-direction: column;
-  
-  @include media-breakpoint-up(md){
-    flex-direction: row;
-  }
-  
-  &__label{
+  flex-direction: row;
+
+  &__label {
     margin-right: var(--spacer-4);
   }
-  
-  &__list{
+
+  &__list {
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
+    gap: 12px;
     flex-wrap: wrap;
   }
-  
-  &__entry,
-  &__create-form{
-    margin: var(--spacer-0) var(--spacer-2) var(--spacer-2) var(--spacer-0);
-  }
-
 }
