--- a/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -1,21 +1,21 @@
 <div class="container list">
-  <ng-container *ngIf="!isUpdatingGlobally; else loading">
+  @if (!isUpdatingGlobally()) {
     <!-- Insert new first Encounter -->
-    <ng-container *ngIf="state === 'EDIT'">
+    @if (state === "EDIT") {
       <div class="row">
         <div class="list__buttons buttons">
-          <ng-container *ngIf="canCreate">
+          @if (canCreate()) {
             <app-button
               class="col-6 col-md-4 buttons__button buttons__button--left"
               title="Add Encounter to Diaryentry"
               [size]="'LARGE'"
               [icon]="'plus'"
               [text]="'Add First Encounter'"
-              [disabled]="isUpdatingAnything"
+              [disabled]="isUpdatingAnything()"
               (click)="addEmptyEncounterAtIndex(-1)"
             ></app-button>
-          </ng-container>
-          <ng-container *ngIf="canUpdate">
+          }
+          @if (canUpdate()) {
             <app-button
               class="col-6 col-md-4 buttons__button buttons__button--right"
               title="Insert Cut Encounter"
@@ -24,84 +24,82 @@
               [text]="'Insert Cut Encounter'"
               [type]="'SECONDARY'"
               [disabled]="
-                isUpdatingAnything ||
-                cutEncounterIndex == null ||
-                cutEncounterIndex === 0
+                isUpdatingAnything() ||
+                cutEncounterIndex() == null ||
+                cutEncounterIndex() === 0
               "
               (click)="onInsertExcisedEncounter(-1 + 1)"
             ></app-button>
-          </ng-container>
+          }
         </div>
       </div>
-    </ng-container>
+    }
 
     <!-- Diaryentry - Encounters -->
     <div class="row">
-      <div
-        *ngFor="
-          let entryEncounter of diaryEntryEncounters;
-          let encounterIndex = index
-        "
-        class="w-100"
-      >
-        <!-- Encounters -->
-        <ng-container [ngSwitch]="state">
-          <ng-container *ngSwitchCase="'READ'">
-            <ng-container
-              *ngTemplateOutlet="
-                displayEncounter;
-                context: { $implicit: entryEncounter }
-              "
-            ></ng-container>
-          </ng-container>
-          <ng-container *ngSwitchCase="'EDIT'">
-            <ng-container
-              *ngTemplateOutlet="
-                editEncounter;
-                context: {
-                  $implicit: { entry: entryEncounter, index: encounterIndex },
-                }
-              "
-            ></ng-container>
-          </ng-container>
-        </ng-container>
-
-        <!-- Insert new Encounter -->
-        <ng-container *ngIf="state === 'EDIT'">
-          <div class="list__buttons buttons">
-            <ng-container *ngIf="canCreate">
-              <app-button
-                class="col-6 col-md-4 buttons__button buttons__button--left"
-                title="Add Encounter to DiaryEntry"
-                [size]="'LARGE'"
-                [icon]="'plus'"
-                [text]="'Add Encounter'"
-                [disabled]="isUpdatingAnything"
-                (click)="addEmptyEncounterAtIndex(encounterIndex)"
-              ></app-button>
-            </ng-container>
-            <ng-container *ngIf="canUpdate">
-              <app-button
-                class="col-6 col-md-4 buttons__button buttons__button--right"
-                title="Insert Cut Encounter"
-                [size]="'LARGE'"
-                [icon]="'file-import'"
-                [text]="'Insert Cut Encounter'"
-                [type]="'SECONDARY'"
-                [disabled]="
-                  isUpdatingAnything ||
-                  cutEncounterIndex == null ||
-                  cutEncounterIndex - 1 === encounterIndex ||
-                  cutEncounterIndex === encounterIndex
+      @for (entryEncounter of diaryEntryEncounters(); track entryEncounter) {
+        <!-- Encounter -->
+        <div class="repeated-unit">
+          @switch (state) {
+            @case ("READ") {
+              <ng-container
+                *ngTemplateOutlet="
+                  displayEncounter;
+                  context: { $implicit: entryEncounter }
                 "
-                (click)="onInsertExcisedEncounter(encounterIndex + 1)"
-              ></app-button>
-            </ng-container>
-          </div>
-        </ng-container>
-      </div>
+              />
+            }
+            @case ("EDIT") {
+              <ng-container
+                *ngTemplateOutlet="
+                  editEncounter;
+                  context: {
+                    $implicit: { entry: entryEncounter, index: $index },
+                  }
+                "
+              />
+            }
+          }
+
+          <!-- Insert new Encounter -->
+          @if (state === "EDIT") {
+            <div class="list__buttons buttons">
+              @if (canCreate()) {
+                <app-button
+                  class="col-6 col-md-4 buttons__button buttons__button--left"
+                  title="Add Encounter to DiaryEntry"
+                  [size]="'LARGE'"
+                  [icon]="'plus'"
+                  [text]="'Add Encounter'"
+                  [disabled]="isUpdatingAnything()"
+                  (click)="addEmptyEncounterAtIndex($index)"
+                ></app-button>
+              }
+              @if (canUpdate()) {
+                <app-button
+                  class="col-6 col-md-4 buttons__button buttons__button--right"
+                  title="Insert Cut Encounter"
+                  [size]="'LARGE'"
+                  [icon]="'file-import'"
+                  [text]="'Insert Cut Encounter'"
+                  [type]="'SECONDARY'"
+                  [disabled]="
+                    isUpdatingAnything() ||
+                    cutEncounterIndex() == null ||
+                    cutEncounterIndex()! - 1 === $index ||
+                    cutEncounterIndex() === $index
+                  "
+                  (click)="onInsertExcisedEncounter($index + 1)"
+                ></app-button>
+              }
+            </div>
+          }
+        </div>
+      }
     </div>
-  </ng-container>
+  } @else {
+    <ng-container *ngTemplateOutlet="loading" />
+  }
 </div>
 
 <ng-template #displayEncounter let-entryEncounter>
@@ -116,16 +114,16 @@
       'animate__animated animate__zoomIn': context.entry.encounter.pk == null,
     }"
   >
-    <ng-container *ngIf="!context.entry.isUpdating; else loading">
+    @if (!context.entry.isUpdating) {
       <app-encounter
         class="encounter-card__encounter"
         [encounter]="context.entry.encounter"
-        [characters]="campaignCharacters"
-        [locations]="campaignLocations"
-        [serverModel]="encounterServerModel"
-        [canUpdate]="canUpdate"
-        [canDelete]="canDelete"
-        [canCreate]="canCreate"
+        [characters]="campaignCharacters() ?? []"
+        [locations]="campaignLocations() ?? []"
+        [serverModel]="encounterServerModel()"
+        [canUpdate]="canUpdate()"
+        [canDelete]="canDelete()"
+        [canCreate]="canCreate()"
         [initialState]="
           context.entry.encounter.pk == null ? 'CREATE' : 'DISPLAY'
         "
@@ -136,43 +134,48 @@
         (encounterCreate)="encounterCreate.emit($event)"
         (encounterCreateCancel)="onEncounterCreateCancel(context.index)"
       ></app-encounter>
-      <ng-container *ngIf="context.entry.encounter.pk != null && canUpdate">
+      @if (canUpdate() && context.entry.encounter.pk != null) {
         <div class="encounter-card__side-buttons side-buttons">
           <app-button
             class="side-buttons__button side-buttons__button--edit"
             [disabled]="
-              cutEncounterIndex != null && context.index !== cutEncounterIndex
+              cutEncounterIndex() != null &&
+              context.index !== cutEncounterIndex()
             "
             [type]="
-              cutEncounterIndex != null && context.index === cutEncounterIndex
+              cutEncounterIndex() != null &&
+              context.index === cutEncounterIndex()
                 ? 'PRIMARY'
                 : 'DARK'
             "
             [icon]="
-              cutEncounterIndex != null && context.index === cutEncounterIndex
+              cutEncounterIndex() != null &&
+              context.index === cutEncounterIndex()
                 ? 'times'
                 : 'cut'
             "
-            [disabled]="isUpdatingAnything"
+            [disabled]="isUpdatingAnything()"
             (click)="onExcisionClick(context.index)"
           ></app-button>
           <app-arrow-button
             class="side-buttons__button side-buttons__button--arrow"
             [type]="'DARK'"
             [icon]="'up'"
-            [disabled]="isUpdatingAnything"
+            [disabled]="isUpdatingAnything()"
             (click)="onEncounterOrderDecrease(context.index)"
           ></app-arrow-button>
           <app-arrow-button
             class="side-buttons__button side-buttons__button--arrow"
             [type]="'DARK'"
             [icon]="'down'"
-            [disabled]="isUpdatingAnything"
+            [disabled]="isUpdatingAnything()"
             (click)="onEncounterOrderIncrease(context.index)"
           ></app-arrow-button>
         </div>
-      </ng-container>
-    </ng-container>
+      }
+    } @else {
+      <ng-container *ngTemplateOutlet="loading" />
+    }
   </app-card>
 </ng-template>
 
