--- a/src/design/molecules/form/form.component.html
+++ b/src/design/molecules/form/form.component.html
@@ -11,6 +11,15 @@
     [options]="{}"
   ></formly-form>
 
+  @let errors = formErrors();
+  @if (errors && errors.length > 0) {
+    <div class="form__errors">
+      @for (error of errors; track error) {
+        <div class="invalid-feedback d-block">{{ error }}</div>
+      }
+    </div>
+  }
+
   @if (!disabled() && enableSubmitButtons) {
     <div class="form__button-container">
       <!-- Cancel Button -->
