--- a/src/design/molecules/form/form.component.scss
+++ b/src/design/molecules/form/form.component.scss
@@ -1,11 +1,15 @@
-.strikethrough{
+.strikethrough {
   text-decoration: line-through;
 }
 
-.form{
-  &__button{
+.form {
+  &__button {
     width: fit-content;
     display: inline-block;
     margin-right: var(--spacer-2);
+  }
+
+  &__errors {
+    margin-bottom: var(--spacer-3);
   }
 }
